fase 3/implementacion_desc_javacc/ConstructorASTsTiny.java
/* ConstructorASTsTiny.java */
/* Generated By:JavaCC: Do not edit this line. ConstructorASTsTiny.java */
package implementacion_desc_javacc;
import asint.ClaseSemanticaTiny;
import asint.SintaxisAbstractaTiny.Exp;
import asint.SintaxisAbstractaTiny.ParamsR;
import asint.SintaxisAbstractaTiny.ParamsRL;
import asint.SintaxisAbstractaTiny.Insts;
import asint.SintaxisAbstractaTiny.InstsAux;
import asint.SintaxisAbstractaTiny.Inst;
import asint.SintaxisAbstractaTiny.Campo;
import asint.SintaxisAbstractaTiny.LCampos;
import asint.SintaxisAbstractaTiny.T;
import asint.SintaxisAbstractaTiny.ParamsF;
import asint.SintaxisAbstractaTiny.Param;
import asint.SintaxisAbstractaTiny.ParamsFL;
import asint.SintaxisAbstractaTiny.Dec;
import asint.SintaxisAbstractaTiny.Decs;
import asint.SintaxisAbstractaTiny.DecsAux;
import asint.SintaxisAbstractaTiny.Bloq;
import asint.SintaxisAbstractaTiny.Prog;
import c_ast_ascendente.UnidadLexica.StringLocalizado;

public class ConstructorASTsTiny implements ConstructorASTsTinyConstants {
    protected void newToken(Token t) {}
    private ClaseSemanticaTiny sem = new ClaseSemanticaTiny();

// ======== REGLAS SINTACTICAS ========
  final public 
    Prog analiza() throws ParseException {
    trace_call("analiza");
    try {
Prog prog;
      prog = programa();
      jj_consume_token(0);
{if ("" != null) return prog;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("analiza");
    }
}

  final public Prog programa() throws ParseException {
    trace_call("programa");
    try {
Bloq bloq;
      bloq = bloque();
{if ("" != null) return sem.prog(bloq);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("programa");
    }
}

  final public Bloq bloque() throws ParseException {
    trace_call("bloque");
    try {
Decs decs; Insts insts;
      jj_consume_token(34);
      decs = declaraciones();
      insts = instrucciones();
      jj_consume_token(35);
{if ("" != null) return sem.bloq(decs, insts);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("bloque");
    }
}

  final public Decs declaraciones() throws ParseException {
    trace_call("declaraciones");
    try {
DecsAux decsAux;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case proc:
      case type:
      case iden:
      case 42:
      case 44:{
        decsAux = declaracionesAux();
        jj_consume_token(36);
{if ("" != null) return sem.si_decs(decsAux);}
        break;
        }
      default:
        jj_la1[0] = jj_gen;
{if ("" != null) return sem.no_decs();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaraciones");
    }
}

  final public DecsAux declaracionesAux() throws ParseException {
    trace_call("declaracionesAux");
    try {
DecsAux decsAux; Dec dec;
      dec = declaracion();
      decsAux = recDeclaracion(sem.una_dec(dec));
{if ("" != null) return decsAux;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracionesAux");
    }
}

  final public DecsAux recDeclaracion(DecsAux decsAuxh) throws ParseException {
    trace_call("recDeclaracion");
    try {
DecsAux decsAux; Dec dec;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 37:{
        jj_consume_token(37);
        dec = declaracion();
        decsAux = recDeclaracion(sem.muchas_decs(decsAuxh, dec));
{if ("" != null) return decsAux;}
        break;
        }
      default:
        jj_la1[1] = jj_gen;
{if ("" != null) return decsAuxh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("recDeclaracion");
    }
}

  final public Dec declaracion() throws ParseException {
    trace_call("declaracion");
    try {
T tipo; Token id; ParamsF paramsF; Bloq bloq;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case iden:
      case 42:
      case 44:{
        tipo = tipo0();
        id = jj_consume_token(iden);
{if ("" != null) return (Dec)sem.dec_var(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case type:{
        jj_consume_token(type);
        tipo = tipo0();
        id = jj_consume_token(iden);
{if ("" != null) return (Dec)sem.dec_tipo(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case proc:{
        jj_consume_token(proc);
        id = jj_consume_token(iden);
        paramsF = paramsFormales();
        bloq = bloque();
{if ("" != null) return (Dec)sem.dec_proc(id.image, paramsF, bloq).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion");
    }
}

  final public ParamsF paramsFormales() throws ParseException {
    trace_call("paramsFormales");
    try {
ParamsF paramsF;
      jj_consume_token(38);
      paramsF = paramsFormalesAux();
      jj_consume_token(39);
{if ("" != null) return paramsF;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("paramsFormales");
    }
}

  final public ParamsF paramsFormalesAux() throws ParseException {
    trace_call("paramsFormalesAux");
    try {
ParamsFL paramsFL;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case iden:
      case 41:
      case 42:
      case 44:{
        paramsFL = paramsFormalesLista();
{if ("" != null) return sem.si_paramF(paramsFL);}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
{if ("" != null) return sem.no_paramF();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("paramsFormalesAux");
    }
}

  final public ParamsFL paramsFormalesLista() throws ParseException {
    trace_call("paramsFormalesLista");
    try {
ParamsFL paramsFL; Param param;
      param = param();
      paramsFL = recParamFormal(sem.un_paramF(param));
{if ("" != null) return paramsFL;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("paramsFormalesLista");
    }
}

  final public ParamsFL recParamFormal(ParamsFL paramsFLh) throws ParseException {
    trace_call("recParamFormal");
    try {
ParamsFL paramsFL; Param param;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 40:{
        jj_consume_token(40);
        param = param();
        paramsFL = recParamFormal(sem.muchos_paramsF(paramsFLh, param));
{if ("" != null) return paramsFL;}
        break;
        }
      default:
        jj_la1[4] = jj_gen;
{if ("" != null) return paramsFLh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("recParamFormal");
    }
}

  final public Param param() throws ParseException {
    trace_call("param");
    try {
T tipo0; Token id;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 41:
      case 42:
      case 44:{
        tipo0 = tipo0();
        jj_consume_token(41);
        id = jj_consume_token(iden);
{if ("" != null) return sem.param_ref(tipo0, id.image);}
        break;
        }
      case iden:{
        tipo0 = tipo0();
        id = jj_consume_token(iden);
{if ("" != null) return sem.param(tipo0, id.image);}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("param");
    }
}

  final public T tipo0() throws ParseException {
    trace_call("tipo0");
    try {
T tipo; T recArray;
      tipo = tipo1();
      recArray = recArray(tipo);
{if ("" != null) return recArray;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo0");
    }
}

  final public T recArray(T tipoh) throws ParseException {
    trace_call("recArray");
    try {
Token litEntero; T recArray;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 42:{
        jj_consume_token(42);
        litEntero = jj_consume_token(iden);
        jj_consume_token(43);
        recArray = recArray((T)sem.tipo_array(tipoh, litEntero.image).ponFila(litEntero.beginLine).ponCol(litEntero.beginColumn));
{if ("" != null) return recArray;}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
{if ("" != null) return tipoh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("recArray");
    }
}

  final public T tipo1() throws ParseException {
    trace_call("tipo1");
    try {
T tipo;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 44:{
        jj_consume_token(44);
        tipo = tipo1();
{if ("" != null) return sem.tipo_punt(tipo);}
        break;
        }
      default:
        jj_la1[7] = jj_gen;
{if ("" != null) return tipo2();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo1");
    }
}

  final public T tipo2() throws ParseException {
    trace_call("tipo2");
    try {
LCampos lCampos; Token id;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case struct:{
        jj_consume_token(struct);
        jj_consume_token(34);
        lCampos = listaCampos();
        jj_consume_token(35);
{if ("" != null) return sem.tipo_struct(lCampos);}
        break;
        }
      case INT:{
        jj_consume_token(INT);
{if ("" != null) return sem.ent();}
        break;
        }
      case real:{
        jj_consume_token(real);
{if ("" != null) return sem.real();}
        break;
        }
      case bool:{
        jj_consume_token(bool);
{if ("" != null) return sem.bool();}
        break;
        }
      case string:{
        jj_consume_token(string);
{if ("" != null) return sem.tipo_string();}
        id = jj_consume_token(iden);
{if ("" != null) return (T)sem.tipo_iden(id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo2");
    }
}

  final public LCampos listaCampos() throws ParseException {
    trace_call("listaCampos");
    try {
LCampos lCampos; Campo campo;
      campo = campo();
      lCampos = recCampo(sem.un_campo(campo));
{if ("" != null) return lCampos;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("listaCampos");
    }
}

  final public LCampos recCampo(LCampos camposh) throws ParseException {
    trace_call("recCampo");
    try {
LCampos lCampos; Campo campo;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 40:{
        jj_consume_token(40);
        campo = campo();
        lCampos = recCampo(sem.muchos_campos(camposh, campo));
{if ("" != null) return lCampos;}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
{if ("" != null) return camposh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("recCampo");
    }
}

  final public Campo campo() throws ParseException {
    trace_call("campo");
    try {
T tipo; Token id;
      tipo = tipo0();
      id = jj_consume_token(iden);
{if ("" != null) return (Campo)sem.campo(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("campo");
    }
}

  final public Insts instrucciones() throws ParseException {
    trace_call("instrucciones");
    try {
InstsAux instsAux;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case NEW:
      case delete:
      case read:
      case write:
      case nl:
      case call:
      case 34:
      case 45:{
        instsAux = instruccionesAux();
{if ("" != null) return sem.si_instr(instsAux);}
        break;
        }
      default:
        jj_la1[10] = jj_gen;
{if ("" != null) return sem.no_instr();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instrucciones");
    }
}

  final public InstsAux instruccionesAux() throws ParseException {
    trace_call("instruccionesAux");
    try {
InstsAux instsAux; Inst inst;
      inst = instruccion();
      instsAux = recInstruccion(sem.una_instr(inst));
{if ("" != null) return instsAux;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instruccionesAux");
    }
}

  final public InstsAux recInstruccion(InstsAux instsAuxh) throws ParseException {
    trace_call("recInstruccion");
    try {
InstsAux instsAux; Inst inst;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 37:{
        jj_consume_token(37);
        inst = instruccion();
        instsAux = recInstruccion(sem.muchas_instr(instsAuxh, inst));
{if ("" != null) return instsAux;}
        break;
        }
      default:
        jj_la1[11] = jj_gen;
{if ("" != null) return instsAuxh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("recInstruccion");
    }
}

  final public Inst instruccion() throws ParseException {
    trace_call("instruccion");
    try {
Exp exp; Bloq bloq1; Token id; ParamsR paramsR; Inst inst;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        jj_consume_token(45);
        exp = expr();
{if ("" != null) return sem.instr_expr(exp);}
        break;
        }
      case IF:{
        jj_consume_token(IF);
        exp = expr();
        bloq1 = bloque();
        inst = factIf(exp, bloq1);
{if ("" != null) return inst;}
        break;
        }
      case WHILE:{
        jj_consume_token(WHILE);
        exp = expr();
        bloq1 = bloque();
{if ("" != null) return sem.instr_while(exp, bloq1);}
        break;
        }
      case read:{
        jj_consume_token(read);
        exp = expr();
{if ("" != null) return sem.instr_read(exp);}
        break;
        }
      case write:{
        jj_consume_token(write);
        exp = expr();
{if ("" != null) return sem.instr_write(exp);}
        break;
        }
      case nl:{
        jj_consume_token(nl);
{if ("" != null) return sem.instr_nl();}
        break;
        }
      case NEW:{
        jj_consume_token(NEW);
        exp = expr();
{if ("" != null) return sem.instr_new(exp);}
        break;
        }
      case delete:{
        jj_consume_token(delete);
        exp = expr();
{if ("" != null) return sem.instr_del(exp);}
        break;
        }
      case call:{
        jj_consume_token(call);
        id = jj_consume_token(iden);
        paramsR = paramsReales();
{if ("" != null) return (Inst)sem.instr_call(id.image, paramsR).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case 34:{
        bloq1 = bloque();
{if ("" != null) return sem.instr_bloque(bloq1);}
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instruccion");
    }
}

  final public Inst factIf(Exp exph, Bloq bloqh) throws ParseException {
    trace_call("factIf");
    try {
Bloq bloq;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        bloq = bloque();
{if ("" != null) return sem.instr_if_else(exph, bloqh, bloq);}
        break;
        }
      default:
        jj_la1[13] = jj_gen;
{if ("" != null) return sem.instr_if(exph, bloqh);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("factIf");
    }
}

  final public ParamsR paramsReales() throws ParseException {
    trace_call("paramsReales");
    try {
ParamsRL paramsRL;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 38:{
        jj_consume_token(38);
        paramsRL = paramsRealesLista();
        jj_consume_token(39);
{if ("" != null) return sem.si_paramsR(paramsRL);}
        break;
        }
      default:
        jj_la1[14] = jj_gen;
{if ("" != null) return sem.no_paramsR();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("paramsReales");
    }
}

  final public ParamsRL paramsRealesLista() throws ParseException {
    trace_call("paramsRealesLista");
    try {
ParamsRL paramsRL; Exp exp;
      exp = expr();
      paramsRL = recParamReal(sem.un_paramsR(exp));
{if ("" != null) return paramsRL;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("paramsRealesLista");
    }
}

  final public ParamsRL recParamReal(ParamsRL paramsRLh) throws ParseException {
    trace_call("recParamReal");
    try {
ParamsRL paramsRL; Exp exp;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 40:{
        jj_consume_token(40);
        exp = expr();
        paramsRL = recParamReal(sem.muchos_paramsR(paramsRLh, exp));
{if ("" != null) return paramsRL;}
        break;
        }
      default:
        jj_la1[15] = jj_gen;
{if ("" != null) return paramsRLh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("recParamReal");
    }
}

  final public Exp expr() throws ParseException {
    trace_call("expr");
    try {
Exp e0;
      e0 = e0();
{if ("" != null) return e0;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expr");
    }
}

  final public Exp e0() throws ParseException {
    trace_call("e0");
    try {
Exp e1; Exp e0;
      e1 = e1();
      e0 = facE1(e1);
{if ("" != null) return e0;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("e0");
    }
}
